# agent_cli

./: .gitignore  79d80387-28a4-4c29-b971-a1518c1151f7.json  93cf3fe4-cdf1-4b35-b971-1003e9d25116.json  README.md  c0416063-180f-4119-b1a3-393c1e70b8fd.json  consolidate_css.py  debug_simulated_prompt.md  feature_implementation_plan_provider_overlay_2026-03-06.md  implementation_plan.md  implementation_plan.md.resolved  prompt.md  pyproject.toml  pytest_integrity_output.txt  pytest_output.txt  session.json  test_output.txt  test_results.txt  tests_out3.txt  theme_preview.html
.agent_cli/: settings.toml
.agents/knowledge/: PROJECT_CONTEXT.md
agent_cli/: __init__.py  __main__.py
agent_cli/agent/: __init__.py  base.py  default.py  memory.py  parsers.py  protocol.py  react_loop.py  registry.py  schema.py  session_registry.py
agent_cli/assets/: app.tcss
agent_cli/commands/: __init__.py  base.py  parser.py
agent_cli/core/: __init__.py  bootstrap.py  config.py  file_tracker.py  interaction.py  logging.py  orchestrator.py  registry.py  registry_base.py  tui_interaction_handler.py
agent_cli/data/: __init__.py  effort.toml  errors.json  memory.json  memory.toml  models.json  models.toml  providers.json  providers.toml  registry.py  schema.json  schema.toml  tools.json  tools.toml
agent_cli/memory/: __init__.py  budget.py  summarizer.py  (+1 more)
dev/: prompt_analysis.md
roadmap/: phase_6_polish.md
scripts/: simulate_prompt.py
temp/: 6ded69d1-a2dd-44de-b595-af112ac4bb80.json  7a0365a3-5f78-4ce7-a86e-de9c24c7cf73.json  additiona;_report.md
tmp_terminal_repro/: hello.bat
(+437 files in other folders)
