[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cli"
version = "0.1.0"
description = "A basic python module project template"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual>=0.47.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
agent-cli = "agent_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_cli*"]
